--- a/about.html
+++ b/about.html
@@ -70,14 +70,16 @@
         </div>
     </nav>
 	<!-- full Title -->
-	<div class="full-title">
+	<div class= "feild-title">
+	
 		<div class="container">
 			<!-- Page Heading/Breadcrumbs -->
-			<h1 class="mt-4 mb-3">About
-				<small>Subheading</small>
+			<h1 class="mt-4 mb-3" style="color:white;">About
+			
 			</h1>
-		</div>
+		
 	</div>
+</div>
     <!-- Page Content -->
     <div class="container">
 		<div class="breadcrumb-main">
@@ -92,101 +94,26 @@
 		<div class="about-main">
 			<div class="row">
 				<div class="col-lg-6">
-					<img class="img-fluid rounded mb-4" src="images/about-img.jpg" alt="" />
+					<img class="img-fluid rounded mb-4" src="images/farmer-img.jpg" alt="" />
 				</div>
 				<div class="col-lg-6">
 					<h2>About Modern Business</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum consectetur similique? Consectetur, quod, incidunt, harum nisi dolores delectus reprehenderit voluptatem perferendis dicta dolorem non blanditiis ex fugiat.</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
+					<p>Modern farms and agricultural operations work far differently than those a few decades ago, primarily because of advancements in technology, including sensors, devices, machines, and information technology. Today’s agriculture routinely uses sophisticated technologies such as robots, temperature and moisture sensors, aerial images, and GPS technology. These advanced devices and precision agriculture and robotic systems allow businesses to be more profitable, efficient, safer, and more environmentally friendly.</p>
+					<p>In addition, robotic technologies enable more reliable monitoring and management of natural resources, such as air and water quality. It also gives producers greater control over plant and animal production, processing, distribution, and storage, which results in:
+<ul>
+						<li>Greater efficiencies and lower prices</li>
+						<li>Safer growing conditions and safer foods</li>
+						<li>Reduced environmental and ecological impact.</li>
+					</ul>
+					</p>
 				</div>
 			</div>
 			<!-- /.row -->
 		</div>
 
 		<!-- Team Members -->
-		<div class="team-members-box">  
-			<h2>Our Team</h2>
-			<div class="row">
-				<div class="col-lg-4 mb-4">
-				  <div class="card h-100 text-center">
-					<img class="card-img-top" src="images/team_01.jpg" alt="" />
-					<div class="card-body">
-						<h4 class="card-title">Team Member</h4>
-						<h6 class="card-subtitle mb-2 text-muted">Position</h6>
-						<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
-					</div>
-					<div class="card-footer">
-						<ul>
-							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-							<li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-						</ul>
-					</div>
-				  </div>
-				</div>
-				<div class="col-lg-4 mb-4">
-				  <div class="card h-100 text-center">
-					<img class="card-img-top" src="images/team_02.jpg" alt="" />
-					<div class="card-body">
-						<h4 class="card-title">Team Member</h4>
-						<h6 class="card-subtitle mb-2 text-muted">Position</h6>
-						<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
-					</div>
-					<div class="card-footer">
-						<ul>
-							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-							<li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-						</ul>
-					</div>
-				  </div>
-				</div>
-				<div class="col-lg-4 mb-4">
-				  <div class="card h-100 text-center">
-					<img class="card-img-top" src="images/team_03.jpg" alt="" />
-					<div class="card-body">
-						<h4 class="card-title">Team Member</h4>
-						<h6 class="card-subtitle mb-2 text-muted">Position</h6>
-						<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
-					</div>
-					<div class="card-footer">
-						<ul>
-							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-							<li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-						</ul>
-					</div>
-				  </div>
-				</div>
-			</div>
-			<!-- /.row -->
-		</div>
-		<!-- Our Customers -->
-		<div class="customers-box"> 
-			<h2>Our Customers</h2>
-			<div class="row">
-				<div class="col-lg-2 col-sm-4 mb-4">
-				  <img class="img-fluid" src="images/logo_01.png" alt="" />
-				</div>
-				<div class="col-lg-2 col-sm-4 mb-4">
-				  <img class="img-fluid" src="images/logo_02.png" alt="" />
-				</div>
-				<div class="col-lg-2 col-sm-4 mb-4">
-				  <img class="img-fluid" src="images/logo_03.png" alt="" />
-				</div>
-				<div class="col-lg-2 col-sm-4 mb-4">
-				  <img class="img-fluid" src="images/logo_04.png" alt="" />
-				</div>
-				<div class="col-lg-2 col-sm-4 mb-4">
-				  <img class="img-fluid" src="images/logo_05.png" alt="" />
-				</div>
-				<div class="col-lg-2 col-sm-4 mb-4">
-				  <img class="img-fluid" src="images/logo_06.png" alt="" />
-				</div>
-			</div>
-			<!-- /.row -->
-		</div>
+		
+
 		<!-- /.container -->
 	</div>
 
