--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                      Equipment
                   </a>
                   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-                     <a class="dropdown-item" href="portfolio-item.html">Tractor</a>
+                     <a class="dropdown-item" href="tractor.html">Tractor</a>
+                     <a class="dropdown-item" href="irrigation.html">Drip irrigation</a>
                   </div>
                </li>
                <li class="nav-item dropdown">
@@ -67,7 +68,7 @@
                   </div>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="login.html">Login/Signup</a>
+                  <a class="nav-link" href="signup.php">Login/Signup</a>
                </li>
             </ul>
          </div>
