--- a/about.html
+++ b/about.html
@@ -15,61 +15,64 @@
 </head>
 <body>
 	<!-- Navigation -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-light top-nav fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">
-				<h1 style="color:#299406;">Farm Care</h1>
-            </a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="fas fa-bars"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-					<li class="nav-item">
-					   <a class="nav-link active" href="index.html">Home</a>
-					</li>
-					<li class="nav-item">
-					   <a class="nav-link" href="about.html">About</a>
-					</li>
-					<li class="nav-item dropdown">
-					   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
-						  aria-haspopup="true" aria-expanded="false">
-						  Equipment
-					   </a>
-					   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-						  <a class="dropdown-item" href="portfolio-item.html">Tractor</a>
-					   </div>
-					</li>
-					<li class="nav-item dropdown">
-					   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
-						  aria-haspopup="true" aria-expanded="false">
-						  Crops
-					   </a>
-					   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-						  <a class="dropdown-item" href="wheat.html">Wheat </a>
-						  <a class="dropdown-item" href="corn.html">Corn</a>
-	 
-					   </div>
-					</li>
-					<li class="nav-item dropdown">
-					   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown"
-						  aria-haspopup="true" aria-expanded="false">
-						  Fruits
-					   </a>
-					   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-						  <a class="dropdown-item" href="blog-home-1.html">Fruit 1</a>
-						  <a class="dropdown-item" href="blog-home-2.html">Fruit 2</a>
-						  <a class="dropdown-item" href="blog-post.html">Fruit 3</a>
-					   </div>
-					</li>
-					<li class="nav-item">
-					   <a class="nav-link" href="login.html">Login/Signup</a>
-					</li>
-				 </ul>
-            </div>
-        </div>
-    </nav>
-	<!-- full Title -->
+	<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-light top-nav fixed-top">
+		<div class="container">
+		   <a class="navbar-brand" href="index.html">
+			  <h1 style="color:#299406;">Farm Care</h1>
+		   </a>
+		   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+			  data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+			  aria-label="Toggle navigation">
+			  <span class="fas fa-bars"></span>
+		   </button>
+		   <div class="collapse navbar-collapse" id="navbarResponsive">
+			  <ul class="navbar-nav ml-auto">
+				 <li class="nav-item">
+					<a class="nav-link active" href="index.html">Home</a>
+				 </li>
+				 <li class="nav-item">
+					<a class="nav-link" href="about.html">About</a>
+				 </li>
+				 <li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
+					   aria-haspopup="true" aria-expanded="false">
+					   Equipment
+					</a>
+					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+					   <a class="dropdown-item" href="tractor.html">Tractor</a>
+					   <a class="dropdown-item" href="irrigation.html">Drip irrigation</a>
+					</div>
+				 </li>
+				 <li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
+					   aria-haspopup="true" aria-expanded="false">
+					   Crops
+					</a>
+					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+					   <a class="dropdown-item" href="wheat.html">Wheat </a>
+					   <a class="dropdown-item" href="corn.html">Corn</a>
+  
+					</div>
+				 </li>
+				 <li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown"
+					   aria-haspopup="true" aria-expanded="false">
+					   Fruits
+					</a>
+					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
+					   <a class="dropdown-item" href="blog-home-1.html">Fruit 1</a>
+					   <a class="dropdown-item" href="blog-home-2.html">Fruit 2</a>
+					   <a class="dropdown-item" href="blog-post.html">Fruit 3</a>
+					</div>
+				 </li>
+				 <li class="nav-item">
+					<a class="nav-link" href="signup.php">Login/Signup</a>
+				 </li>
+			  </ul>
+		   </div>
+		</div>
+	 </nav>
+	 	<!-- full Title -->
 	<div class= "feild-title">
 	
 		<div class="container">
