updated and added weather screen

--- a/cotton.html
+++ b/cotton.html
@@ -79,7 +79,7 @@
 	<div class="feild-title">
 		<div class="container">
 			<!-- Page Heading/Breadcrumbs -->
-			<h1 class="mt-4 mb-3" style="color:white;">Apple 
+			<h1 class="mt-4 mb-3" style="color:white;">Cotton 
 				
 			</h1>
 		</div>
@@ -90,20 +90,22 @@
 		<div class="breadcrumb-main">
 			<ol class="breadcrumb">
 				<li class="breadcrumb-item">
-					<a href="index.html">Fruits</a>
+					<a href="index.html">Crops</a>
 				</li>
-				<li class="breadcrumb-item active">Apple</li>
+				<li class="breadcrumb-item active">Cotton</li>
 			</ol>
 		</div>
 
 		<!-- Portfolio Item Row -->
 		<div class="row">
 			<div class="col-md-8">
-				<img class="img-fluid" src="images/fruits-img.jpg" alt="" />
+				<img class="img-fluid" src="images/cotton.jpg" alt="" />
 			</div>
 			<div class="col-md-4">
-					<h3 class="my-3">Apple </h3>
-					<p>An apple is an edible fruit produced by an apple tree. Apple trees are cultivated worldwide and are the most widely grown species in the genus Malus. The tree originated in Central Asia, where its wild ancestor, Malus sieversii, is still found today</p>
+					<h3 class="my-3">Cotton </h3>
+					<p>
+                        Cotton is a soft, fluffy staple fiber that grows in a boll, or protective case, around the seeds of the cotton plants of the genus Gossypium in the mallow family Malvaceae. The fiber is almost pure cellulose. Under natural conditions, the cotton bolls will increase the dispersal of the seeds.
+                    </p>
 				<h3 class="my-3">Crop Details</h3>
 				<ul>
 					<li> Growth: November to April</li>
@@ -121,8 +123,8 @@
 			<div class="row">
 
 				<div class="col-md-3 col-sm-6 mb-4">
-					<a href="mango.html">
-						<img class="img-fluid" src="images/mango-img.jpg" alt="" />
+					<a href="rice.html">
+						<img class="img-fluid" src="images/rice.jpg" alt="" />
 					</a>
 				</div>
 				
