--- a/tractor.html
+++ b/tractor.html
@@ -62,19 +62,21 @@
                        Fruits
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-                       <a class="dropdown-item" href="blog-home-1.html">Fruit 1</a>
-                       <a class="dropdown-item" href="blog-home-2.html">Fruit 2</a>
-                       <a class="dropdown-item" href="blog-post.html">Fruit 3</a>
+                       <a class="dropdown-item" href="apple.html">Apple</a>
+                       <a class="dropdown-item" href="mango.html">Mango</a>
+                    
                     </div>
                  </li>
                  <li class="nav-item">
-                    <a class="nav-link" href="signup.php">Login/Signup</a>
+                    <a class="nav-link" href="weather.html">Weather</a>
+                 </li>
+                 <li class="nav-item">
+                    <a class="nav-link" href="logout.php">Logout</a>
                  </li>
               </ul>
            </div>
         </div>
      </nav>
-
     <!-- full Title -->
     <div class="feild-title">
         <div class="container">
@@ -90,7 +92,7 @@
         <div class="breadcrumb-main">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item">
-                    <a href="index.html">Crops</a>
+                    <a href="index.html">Equipment</a>
                 </li>
                 <li class="breadcrumb-item active">Tractor</li>
             </ol>
@@ -112,11 +114,11 @@
                     mounted on the tractor, and the tractor may also provide a source of power if the implement is
                     mechanised.
                 </p>
-                <h3 class="my-3">Crop Details</h3>
+                <h3 class="my-3">Equipment Details</h3>
                 <ul>
-                    <li> Growth: November to April</li>
-                    <li>Ideal temprature 21° to 24° C</li>
-                    <li>Low humidity areas are considered as ideal condition</li>
+                    <li> comes in diffrent types (harvester/ plougher etc)</li>
+                    <li>mostly used for vast land ploughing</li>
+                   
 
                 </ul>
             </div>
@@ -125,31 +127,14 @@
 
         <div class="related-projects">
             <!-- Related Projects Row -->
-            <h3>Related Crops</h3>
+            <h3>Related equipment</h3>
             <div class="row">
                 <div class="col-md-3 col-sm-6 mb-4">
-                    <a href="#">
-                        <img class="img-fluid" src="images/related-pro-01.jpg" alt="" />
+                    <a href="irrigation.html">
+                        <img class="img-fluid" src="images/drip-img.jpg" alt="" />
                     </a>
                 </div>
 
-                <div class="col-md-3 col-sm-6 mb-4">
-                    <a href="#">
-                        <img class="img-fluid" src="images/related-pro-02.jpg" alt="" />
-                    </a>
-                </div>
-
-                <div class="col-md-3 col-sm-6 mb-4">
-                    <a href="#">
-                        <img class="img-fluid" src="images/related-pro-03.jpg" alt="" />
-                    </a>
-                </div>
-
-                <div class="col-md-3 col-sm-6 mb-4">
-                    <a href="#">
-                        <img class="img-fluid" src="images/related-pro-04.jpg" alt="" />
-                    </a>
-                </div>
 
             </div>
             <!-- /.row -->
