--- a/index.html
+++ b/index.html
@@ -17,63 +17,70 @@
 
 <body>
    <!-- Navigation -->
-   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-light top-nav fixed-top">
-      <div class="container">
-         <a class="navbar-brand" href="index.html">
-            <h1 style="color:#299406;">Farm Care</h1>
-         </a>
-         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-            data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="fas fa-bars"></span>
-         </button>
-         <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-               <li class="nav-item">
-                  <a class="nav-link active" href="index.html">Home</a>
-               </li>
-               <li class="nav-item">
-                  <a class="nav-link" href="about.html">About</a>
-               </li>
-               <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
-                     aria-haspopup="true" aria-expanded="false">
-                     Equipment
-                  </a>
-                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-                     <a class="dropdown-item" href="tractor.html">Tractor</a>
-                     <a class="dropdown-item" href="irrigation.html">Drip irrigation</a>
-                  </div>
-               </li>
-               <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
-                     aria-haspopup="true" aria-expanded="false">
-                     Crops
-                  </a>
-                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-                     <a class="dropdown-item" href="wheat.html">Wheat </a>
-                     <a class="dropdown-item" href="corn.html">Corn</a>
-
-                  </div>
-               </li>
-               <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown"
-                     aria-haspopup="true" aria-expanded="false">
-                     Fruits
-                  </a>
-                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-                     <a class="dropdown-item" href="blog-home-1.html">Fruit 1</a>
-                     <a class="dropdown-item" href="blog-home-2.html">Fruit 2</a>
-                     <a class="dropdown-item" href="blog-post.html">Fruit 3</a>
-                  </div>
-               </li>
-               <li class="nav-item">
-                  <a class="nav-link" href="signup.php">Login/Signup</a>
-               </li>
-            </ul>
+       <!-- Navigation -->
+       <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-light top-nav fixed-top">
+         <div class="container">
+            <a class="navbar-brand" href="index.html">
+               <h1 style="color:#299406;">Farm Care</h1>
+            </a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+               data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+               aria-label="Toggle navigation">
+               <span class="fas fa-bars"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+               <ul class="navbar-nav ml-auto">
+                  <li class="nav-item">
+                     <a class="nav-link active" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="about.html">About</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        Equipment
+                     </a>
+                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+                        <a class="dropdown-item" href="tractor.html">Tractor</a>
+                        <a class="dropdown-item" href="irrigation.html">Drip irrigation</a>
+                     </div>
+                  </li>
+                  <li class="nav-item dropdown">
+                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        Crops
+                     </a>
+                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+                        <a class="dropdown-item" href="wheat.html">Wheat </a>
+                        <a class="dropdown-item" href="corn.html">Corn</a>
+                        <a class="dropdown-item" href="sugarcane.html">Sugarcane</a>
+                        <a class="dropdown-item" href="rice.html">Rice</a>
+                        <a class="dropdown-item" href="cotton.html">Cotton</a>
+   
+                     </div>
+                  </li>
+                  <li class="nav-item dropdown">
+                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        Fruits
+                     </a>
+                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
+                        <a class="dropdown-item" href="apple.html">Apple</a>
+                        <a class="dropdown-item" href="mango.html">Mango</a>  
+                     
+                     </div>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="weather.html">Weather</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="logout.php">Logout</a>
+                  </li>
+               </ul>
+            </div>
          </div>
-      </div>
-   </nav>
+      </nav>	
    <header class="slider-main">
       <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
          <ol class="carousel-indicators">
@@ -132,7 +139,7 @@
                         their size, taste and other qualities. Many crops are farmed in monoculture.</p>
                   </div>
                   <div class="card-footer">
-                     <a href="#" class="btn btn-primary">Learn More</a>
+                     <a href="wheat.html" class="btn btn-primary">Learn More</a>
                   </div>
                </div>
             </div>
@@ -149,7 +156,7 @@
                         fruits.</p>
                   </div>
                   <div class="card-footer">
-                     <a href="#" class="btn btn-primary">Learn More</a>
+                     <a href="apple.html" class="btn btn-primary">Learn More</a>
                   </div>
                </div>
             </div>
@@ -168,7 +175,7 @@
                         world is fed.</p>
                   </div>
                   <div class="card-footer">
-                     <a href="#" class="btn btn-primary">Learn More</a>
+                     <a href="tractor.html" class="btn btn-primary">Learn More</a>
                   </div>
                </div>
             </div>
