--- a/rice.html
+++ b/rice.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<title>Farm Care</title>
+	<title>Farm Care </title>
 	<!-- Bootstrap core CSS -->
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Fontawesome CSS -->
@@ -14,7 +14,8 @@
 	<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-	    <!-- Navigation -->
+    <!-- Navigation -->
+        <!-- Navigation -->
 		<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-light top-nav fixed-top">
 			<div class="container">
 			   <a class="navbar-brand" href="index.html">
@@ -49,8 +50,8 @@
 						   Crops
 						</a>
 						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-							<a class="dropdown-item" href="apple.html">Apple</a>
-							<a class="dropdown-item" href="mango.html">Mango</a>
+						   <a class="dropdown-item" href="wheat.html">Wheat </a>
+						   <a class="dropdown-item" href="corn.html">Corn</a>
 	  
 						</div>
 					 </li>
@@ -74,56 +75,64 @@
 				  </ul>
 			   </div>
 			</div>
-		 </nav>
-	 	<!-- full Title -->
-	<div class= "feild-title">
-	
+		 </nav>	
+		 	<!-- full Title -->
+	<div class="feild-title">
 		<div class="container">
 			<!-- Page Heading/Breadcrumbs -->
-			<h1 class="mt-4 mb-3" style="color:white;">About
-			
+			<h1 class="mt-4 mb-3" style="color:white;">Rice
+				
 			</h1>
-		
+		</div>
 	</div>
-</div>
+
     <!-- Page Content -->
-    <div class="container">
+        <div class="container">
 		<div class="breadcrumb-main">
 			<ol class="breadcrumb">
 				<li class="breadcrumb-item">
-					<a href="index.html">Home</a>
+					<a href="index.html">Crops</a>
 				</li>
-				<li class="breadcrumb-item active">About</li>
+				<li class="breadcrumb-item active">Rice</li>
 			</ol>
 		</div>
-		<!-- About Content -->
-		<div class="about-main">
-			<div class="row">
-				<div class="col-lg-6">
-					<img class="img-fluid rounded mb-4" src="images/farmer-img.jpg" alt="" />
-				</div>
-				<div class="col-lg-6">
-					<h2>About Modern Business</h2>
-					<p>Modern farms and agricultural operations work far differently than those a few decades ago, primarily because of advancements in technology, including sensors, devices, machines, and information technology. Today’s agriculture routinely uses sophisticated technologies such as robots, temperature and moisture sensors, aerial images, and GPS technology. These advanced devices and precision agriculture and robotic systems allow businesses to be more profitable, efficient, safer, and more environmentally friendly.</p>
-					<p>In addition, robotic technologies enable more reliable monitoring and management of natural resources, such as air and water quality. It also gives producers greater control over plant and animal production, processing, distribution, and storage, which results in:
-<ul>
-						<li>Greater efficiencies and lower prices</li>
-						<li>Safer growing conditions and safer foods</li>
-						<li>Reduced environmental and ecological impact.</li>
-					</ul>
-					</p>
-				</div>
+
+		<!-- Portfolio Item Row -->
+		<div class="row">
+			<div class="col-md-8">
+				<img class="img-fluid" src="images/rice.jpg" alt="" />
 			</div>
+			<div class="col-md-4">
+					<h3 class="my-3">Rice</h3>
+					<p>
+                        Rice is the seed of the grass species Oryza sativa or less commonly Oryza glaberrima. The name wild rice is usually used for species of the genera Zizania and Porteresia, both wild and domesticated, although the term may also be used for primitive or uncultivated varieties of Oryza
+					</p>
+				<h3 class="my-3">Crop Details</h3>
+				<ul>
+					<li> Growth: November to April</li>
+					<li>Ideal temprature 21° to 24° C</li>
+					<li>Flooded feilds for ideal Growth</li>
+					
+				</ul>
+			</div>
+		</div>
+		<!-- /.row -->
+
+		<div class="related-projects">
+			<!-- Related Projects Row -->
+			<h3>Related Crops</h3>
+			<div class="row">
+				<div class="col-md-3 col-sm-6 mb-4">
+					<a href="wheat.html">
+						<img class="img-fluid" src="images/wheat-img.jpg" alt="" />
+					</a>
+				</div>
+
+				</div>
 			<!-- /.row -->
 		</div>
-
-		<!-- Team Members -->
-		
-
-		<!-- /.container -->
-	</div>
-
-    <!--footer starts from here-->
+    </div>
+    <!-- /.container -->
 	<footer class="footer">
 		<div class="container bottom_border">
 		   <div class="row">
@@ -201,8 +210,9 @@
 		</div>
 	 </footer>
 
-	 <!-- Bootstrap core JavaScript -->
-	 <script src="vendor/jquery/jquery.min.js"></script>
-	 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- Bootstrap core JavaScript -->
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
