updated navigation of pages

--- a/corn.html
+++ b/corn.html
@@ -34,6 +34,9 @@
 					 <li class="nav-item">
 						<a class="nav-link" href="about.html">About</a>
 					 </li>
+					 <li class="nav-item">
+						<a class="nav-link" href="technology.html">Technology</a>
+					 </li>
 					 <li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
 						   aria-haspopup="true" aria-expanded="false">
@@ -42,6 +45,9 @@
 						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
 						   <a class="dropdown-item" href="tractor.html">Tractor</a>
 						   <a class="dropdown-item" href="irrigation.html">Drip irrigation</a>
+						   <a class="dropdown-item" href="fertilizer.html">Fertilizer</a>
+						   <a class="dropdown-item" href="seed.html">Seeds</a>
+   
 						</div>
 					 </li>
 					 <li class="nav-item dropdown">
@@ -52,6 +58,9 @@
 						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
 						   <a class="dropdown-item" href="wheat.html">Wheat </a>
 						   <a class="dropdown-item" href="corn.html">Corn</a>
+						   <a class="dropdown-item" href="sugarcane.html">Sugarcane</a>
+						   <a class="dropdown-item" href="rice.html">Rice</a>
+						   <a class="dropdown-item" href="cotton.html">Cotton</a>
 	  
 						</div>
 					 </li>
@@ -62,7 +71,9 @@
 						</a>
 						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
 						   <a class="dropdown-item" href="apple.html">Apple</a>
-						   <a class="dropdown-item" href="mango.html">Mango</a>
+						   <a class="dropdown-item" href="mango.html">Mango</a>  
+						   <a class="dropdown-item" href="citrus.html">citrus</a>
+						   <a class="dropdown-item" href="vegetables.html">Vegetables</a>
 						
 						</div>
 					 </li>
@@ -75,7 +86,7 @@
 				  </ul>
 			   </div>
 			</div>
-		 </nav>	
+		 </nav>		
 		 	<!-- full Title -->
 	<div class="feild-title">
 		<div class="container">
