--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                   <li class="nav-item">
                      <a class="nav-link" href="about.html">About</a>
                   </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="technology.html">Technology</a>
+                  </li>
                   <li class="nav-item dropdown">
                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
@@ -44,6 +47,9 @@
                      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
                         <a class="dropdown-item" href="tractor.html">Tractor</a>
                         <a class="dropdown-item" href="irrigation.html">Drip irrigation</a>
+                        <a class="dropdown-item" href="fertilizer.html">Fertilizer</a>
+                        <a class="dropdown-item" href="seed.html">Seeds</a>
+
                      </div>
                   </li>
                   <li class="nav-item dropdown">
@@ -68,6 +74,8 @@
                      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
                         <a class="dropdown-item" href="apple.html">Apple</a>
                         <a class="dropdown-item" href="mango.html">Mango</a>  
+                        <a class="dropdown-item" href="citrus.html">citrus</a>
+                        <a class="dropdown-item" href="vegetables.html">Vegetables</a>
                      
                      </div>
                   </li>
