--- a/wheat.html
+++ b/wheat.html
@@ -33,6 +33,9 @@
 				 <li class="nav-item">
 					<a class="nav-link" href="about.html">About</a>
 				 </li>
+				 <li class="nav-item">
+					<a class="nav-link" href="technology.html">Technology</a>
+				 </li>
 				 <li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
 					   aria-haspopup="true" aria-expanded="false">
@@ -41,6 +44,9 @@
 					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
 					   <a class="dropdown-item" href="tractor.html">Tractor</a>
 					   <a class="dropdown-item" href="irrigation.html">Drip irrigation</a>
+					   <a class="dropdown-item" href="fertilizer.html">Fertilizer</a>
+					   <a class="dropdown-item" href="seed.html">Seeds</a>
+
 					</div>
 				 </li>
 				 <li class="nav-item dropdown">
@@ -64,7 +70,9 @@
 					</a>
 					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
 					   <a class="dropdown-item" href="apple.html">Apple</a>
-					   <a class="dropdown-item" href="mango.html">Mango</a>
+					   <a class="dropdown-item" href="mango.html">Mango</a>  
+					   <a class="dropdown-item" href="citrus.html">citrus</a>
+					   <a class="dropdown-item" href="vegetables.html">Vegetables</a>
 					
 					</div>
 				 </li>
@@ -77,8 +85,8 @@
 			  </ul>
 		   </div>
 		</div>
-	 </nav>
-	 	<!-- full Title -->
+	 </nav>	
+	  	<!-- full Title -->
 	<div class="feild-title">
 		<div class="container">
 			<!-- Page Heading/Breadcrumbs -->
