fixed some typos and footer

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                      <a class="nav-link active" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="about.html">About</a>
+                     <a class="nav-link " href="about.html">About</a>
                   </li>
                   <li class="nav-item">
                      <a class="nav-link" href="technology.html">Technology</a>
@@ -123,14 +123,14 @@
             <!-- Slide Two - Set the background image for this slide in the line below -->
             <div class="carousel-item" style="background-image: url('images/slider-02.jpg')">
                <div class="carousel-caption d-none d-md-block">
-                  <h3>Enlightning People</h3>
+                  <h3>Enlightening People</h3>
                   <p>Guiding people about farming</p>
                </div>
             </div>
             <!-- Slide Three - Set the background image for this slide in the line below -->
             <div class="carousel-item" style="background-image: url('images/slider-03.jpg')">
                <div class="carousel-caption d-none d-md-block">
-                  <h3>Combinig Farming and technology</h3>
+                  <h3>Combining Farming and technology</h3>
                   <p>Providing farmers with insight on diffrent variables</p>
                </div>
             </div>
@@ -148,7 +148,7 @@
    <!-- Page Content -->
    <div class="container">
       <div class="services-bar">
-         <h1 class="my-4">Catagories</h1>
+         <h1 class="my-4">Categories</h1>
          <!-- Services Section -->
          <div class="row">
             <div class="col-lg-4 mb-4">
@@ -174,7 +174,7 @@
                      <img class="img-fluid" src="images/fruits-img.jpg" alt="" />
                   </div>
                   <div class="card-body">
-                     <p class="card-text"> Fruits are important sources of vitamins and carbohydrates like fiber and
+                     <p class="card-text"> Fruits are important source of vitamins and carbohydrates like fiber and
                         sugar. They are low in calories and naturally sweet. Fruits and their juices are good sources of
                         water, too. Different fruits contain different vitamins, so it is important to eat a variety of
                         fruits.</p>
@@ -194,7 +194,7 @@
                      <p class="card-text">Agricultural machinery relates to the mechanical structures, from hand tools
                         and
                         power tools to tractors and the countless kinds of farm implements that they tow or operate.
-                        Diverse arrays of equipment are used in both organic and nonorganic farming. Agricultural
+                        Diverse arrays of equipment are used in both organic and inorganic farming. Agricultural
                         machinery is an indispensable part of how the
                         world is fed.</p>
                   </div>
@@ -243,8 +243,8 @@
                   <!--headin5_amrc-->
                   <p class="mb10">We are Final year students in Arid university Rawalpindi</p>
                   <p><i class="fa fa-location-arrow"></i> Murree roard , Shamsabad metro station ARID university </p>
-                  <p><i class="fa fa-phone"></i> 051-9062313 </p>
-                  <p><i class="fa fa fa-envelope"></i> admissions@uaar.edu.pk </p>
+                  <p><i class="fa fa-phone"></i> +92312-5661662 </p>
+                  <p><i class="fa fa fa-envelope"></i> arslantahir0007@gmail.com </p>
                </div>
                <div class="col-lg-3 col-md-6 col-sm-6 col">
                   <h5 class="headin5_amrc col_white_amrc pt2">Follow us</h5>
@@ -300,10 +300,14 @@
          </div>
          <div class="container">
             <!--foote_bottom_ul_amrc ends here-->
+
+            <!--
             <p class="copyright text-center">All Rights Reserved. &copy; 2018 <a href="#">Arslan Tahir Farm Care</a>
                Design By :
                <a href="https://www.facebook.com/arslan.tahir.3114">Arslan Tahir</a>
             </p>
+            -->
+
             <ul class="social_footer_ul">
                <li><a href="https://www.facebook.com/arslan.tahir.3114"><i class="fab fa-facebook-f"></i></a></li>
                <li><a href="https://twitter.com/uaarofficial?lang=en"><i class="fab fa-twitter"></i></a></li>
