--- a/tractor.html
+++ b/tractor.html
@@ -30,7 +30,7 @@
            <div class="collapse navbar-collapse" id="navbarResponsive">
               <ul class="navbar-nav ml-auto">
                  <li class="nav-item">
-                    <a class="nav-link active" href="index.html">Home</a>
+                    <a class="nav-link " href="index.html">Home</a>
                  </li>
                  <li class="nav-item">
                     <a class="nav-link" href="about.html">About</a>
@@ -39,7 +39,7 @@
                     <a class="nav-link" href="technology.html">Technology</a>
                  </li>
                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
+                    <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
                        aria-haspopup="true" aria-expanded="false">
                        Equipment
                     </a>
@@ -170,81 +170,69 @@
     <!-- /.container -->
 
     <footer class="footer">
-        <div class="container bottom_border">
-           <div class="row">
-              <div class="col-lg-3 col-md-6 col-sm-6 col">
-                 <h5 class="headin5_amrc col_white_amrc pt2">Find us</h5>
-                 <!--headin5_amrc-->
-                 <p class="mb10">We are Final year students in Arid university Rawalpindi</p>
-                 <p><i class="fa fa-location-arrow"></i> Murree roard , Shamsabad metro station ARID university </p>
-                 <p><i class="fa fa-phone"></i> 051-9062313 </p>
-                 <p><i class="fa fa fa-envelope"></i> admissions@uaar.edu.pk </p>
-              </div>
-              <div class="col-lg-3 col-md-6 col-sm-6 col">
-                 <h5 class="headin5_amrc col_white_amrc pt2">Follow us</h5>
-                 <!--headin5_amrc ends here-->
-                 <ul class="footer_ul2_amrc">
-                    <li>
-                       <a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-                       <p>Follow us on <a
-                             href="https://twitter.com/uaarofficial?lang=en">twitter</a>
-                       </p>
-                    </li>
-                   
-                 </ul>
-                 <!--footer_ul2_amrc ends here-->
-              </div>
-              <div class="col-lg-3 col-md-6 col-sm-6">
-                 <h5 class="headin5_amrc col_white_amrc pt2">Quick links</h5>
-                 <!--headin5_amrc-->
-                 <ul class="footer_ul_amrc">
+      <div class="container bottom_border">
+         <div class="row">
+            <div class="col-lg-3 col-md-6 col-sm-6 col">
+               <h5 class="headin5_amrc col_white_amrc pt2">Find us</h5>
+               <!--headin5_amrc-->
+               <p class="mb10">We are Final year students in Arid university Rawalpindi</p>
+               <p><i class="fa fa-location-arrow"></i> Murree roard , Shamsabad metro station ARID university </p>
+               <p><i class="fa fa-phone"></i> +92312-5661662 </p>
+               <p><i class="fa fa fa-envelope"></i> arslantahir0007@gmail.com </p>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6 col">
+               <h5 class="headin5_amrc col_white_amrc pt2">Follow us</h5>
+               <!--headin5_amrc ends here-->
+               <ul class="footer_ul2_amrc">
+                  <li>
+                     <a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
+                     <p>Follow us on <a
+                           href="https://twitter.com/uaarofficial?lang=en">twitter</a>
+                     </p>
+                  </li>
+                 
+               </ul>
+               <!--footer_ul2_amrc ends here-->
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6">
+               <h5 class="headin5_amrc col_white_amrc pt2">Quick links</h5>
+               <!--headin5_amrc-->
+               <ul class="footer_ul_amrc">
 
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="contact.html">Get In Touch</a></li>
-                 </ul>
-                 <!--footer_ul_amrc ends here-->
-              </div>
-              <div class="col-lg-3 col-md-6 col-sm-6 ">
-                 <h5 class="headin5_amrc col_white_amrc pt2">Recent posts</h5>
-                 <!--headin5_amrc-->
-                 <ul class="footer_ul_amrc">
-                    <li class="media">
-                       <div class="media-body">
-                          <a href="tractor.html">Some commonly used farming equipments?</p>
+                  <li><a href="about.html">About Us</a></li>
+                  <li><a href="contact.html">Get In Touch</a></li>
+               </ul>
+               <!--footer_ul_amrc ends here-->
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6 ">
+               <h5 class="headin5_amrc col_white_amrc pt2">Recent posts</h5>
+               <!--headin5_amrc-->
+               <ul class="footer_ul_amrc">
+                  <li class="media">
+                     <div class="media-body">
+                        <a href="tractor.html">Some commonly used farming equipments?</p>
 
-                       </div>
-                    </li>
-                    <li class="media">
+                     </div>
+                  </li>
+                  <li class="media">
 
-                       <div class="media-body">
-                          <a href="seed.html">seeds and their importance?</a>
+                     <div class="media-body">
+                        <a href="seed.html">seeds and their importance?</a>
 
-                       </div>
-                    </li>
-                    <li class="media">
+                     </div>
+                  </li>
+                  <li class="media">
 
-                       <div class="media-body">
-                          <a href="mango.html">King of fruits?</p>
-                       </div>
-                    </li>
-                 </ul>
-                 <!--footer_ul_amrc ends here-->
-              </div>
-           </div>
-        </div>
-        <div class="container">
-           <!--foote_bottom_ul_amrc ends here-->
-           <p class="copyright text-center">All Rights Reserved. &copy; 2018 <a href="#">Arslan Tahir Farm Care</a>
-              Design By :
-              <a href="https://www.facebook.com/arslan.tahir.3114">Arslan Tahir</a>
-           </p>
-           <ul class="social_footer_ul">
-              <li><a href="https://www.facebook.com/arslan.tahir.3114"><i class="fab fa-facebook-f"></i></a></li>
-              <li><a href="https://twitter.com/uaarofficial?lang=en"><i class="fab fa-twitter"></i></a></li>
-           </ul>
-           <!--social_footer_ul ends here-->
-        </div>
-     </footer>
+                     <div class="media-body">
+                        <a href="mango.html">King of fruits?</p>
+                     </div>
+                  </li>
+               </ul>
+               <!--footer_ul_amrc ends here-->
+            </div>
+         </div>
+      </div>
+      <div class="container">
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
