--- a/citrus.html
+++ b/citrus.html
@@ -29,7 +29,7 @@
 		   <div class="collapse navbar-collapse" id="navbarResponsive">
 			  <ul class="navbar-nav ml-auto">
 				 <li class="nav-item">
-					<a class="nav-link active" href="index.html">Home</a>
+					<a class="nav-link " href="index.html">Home</a>
 				 </li>
 				 <li class="nav-item">
 					<a class="nav-link" href="about.html">About</a>
@@ -81,7 +81,7 @@
 					</div>
 				 </li>
 				 <li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown"
+					<a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownBlog" data-toggle="dropdown"
 					   aria-haspopup="true" aria-expanded="false">
 					   Horticulture
 					</a>
@@ -107,7 +107,7 @@
 	<div class="feild-title">
 		<div class="container">
 			<!-- Page Heading/Breadcrumbs -->
-			<h1 class="mt-4 mb-3" style="color:white;">Mango 
+			<h1 class="mt-4 mb-3" style="color:white;">Citrus 
 				
 			</h1>
 		</div>
@@ -134,11 +134,11 @@
                     <p>
                         Citrus is a genus of flowering trees and shrubs in the rue family, Rutaceae. Plants in the genus produce citrus fruits, including important crops such as oranges, lemons, grapefruits, pomelos, and limes. The genus Citrus is native to South Asia, East Asia, Southeast Asia, Melanesia, and Australia.
                     </p>
-				<h3 class="my-3">Crop Details</h3>
+				<h3 class="my-3">Fruit Details</h3>
 				<ul>
 					<li> Growth: september to january</li>
 					<li>Ideal temprature 28° to 35° C</li>
-					<li>high humidity and modrate areas are considered as ideal condition</li>
+					<li>high humidity and moderate areas are considered as ideal condition</li>
 					
 				</ul>
 			</div>
@@ -170,8 +170,8 @@
 				 <!--headin5_amrc-->
 				 <p class="mb10">We are Final year students in Arid university Rawalpindi</p>
 				 <p><i class="fa fa-location-arrow"></i> Murree roard , Shamsabad metro station ARID university </p>
-				 <p><i class="fa fa-phone"></i> 051-9062313 </p>
-				 <p><i class="fa fa fa-envelope"></i> admissions@uaar.edu.pk </p>
+				 <p><i class="fa fa-phone"></i> +92312-5661662 </p>
+				 <p><i class="fa fa fa-envelope"></i> arslantahir0007@gmail.com </p>
 			  </div>
 			  <div class="col-lg-3 col-md-6 col-sm-6 col">
 				 <h5 class="headin5_amrc col_white_amrc pt2">Follow us</h5>
@@ -226,18 +226,6 @@
 		   </div>
 		</div>
 		<div class="container">
-		   <!--foote_bottom_ul_amrc ends here-->
-		   <p class="copyright text-center">All Rights Reserved. &copy; 2018 <a href="#">Arslan Tahir Farm Care</a>
-			  Design By :
-			  <a href="https://www.facebook.com/arslan.tahir.3114">Arslan Tahir</a>
-		   </p>
-		   <ul class="social_footer_ul">
-			  <li><a href="https://www.facebook.com/arslan.tahir.3114"><i class="fab fa-facebook-f"></i></a></li>
-			  <li><a href="https://twitter.com/uaarofficial?lang=en"><i class="fab fa-twitter"></i></a></li>
-		   </ul>
-		   <!--social_footer_ul ends here-->
-		</div>
-	 </footer>
 
 	 <!-- Bootstrap core JavaScript -->
 	 <script src="vendor/jquery/jquery.min.js"></script>
