--- a/land.html
+++ b/land.html
@@ -29,7 +29,7 @@
 			   <div class="collapse navbar-collapse" id="navbarResponsive">
 				  <ul class="navbar-nav ml-auto">
 					 <li class="nav-item">
-						<a class="nav-link active" href="index.html">Home</a>
+						<a class="nav-link " href="index.html">Home</a>
 					 </li>
 					 <li class="nav-item">
 						<a class="nav-link" href="about.html">About</a>
@@ -38,7 +38,7 @@
 						<a class="nav-link" href="technology.html">Technology</a>
 					 </li>
 					 <li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
+						<a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
 						   aria-haspopup="true" aria-expanded="false">
 						   Equipment
 						</a>
@@ -133,12 +133,12 @@
 					<h3 class="my-3">Land imprinter</h3>
 
 					<p>
-                        The land imprinter is a no-till device for establishing grass cover in arid environments and deserts. The imprinter consists of a metal roller, with steel angles welded to the surface in various configurations.
+                        The land imprinter is a no-till device for establishing grass cover in arid environments and deserts. The imprinter consists of a metal roller, with steel angles welded to the surface in various configurations, They make it alot easier to manage large feilds, save alot of time and are efficent in their work and productivity.
                     </p>
 				<h3 class="my-3">Equipment Details</h3>
 				<ul>
 					<li>covers large areas</li>
-					<li>Saves time and efficent</li>					
+					<li>Saves time and efficient</li>					
 				</ul>
 			</div>
 		</div>
@@ -169,8 +169,8 @@
 				 <!--headin5_amrc-->
 				 <p class="mb10">We are Final year students in Arid university Rawalpindi</p>
 				 <p><i class="fa fa-location-arrow"></i> Murree roard , Shamsabad metro station ARID university </p>
-				 <p><i class="fa fa-phone"></i> 051-9062313 </p>
-				 <p><i class="fa fa fa-envelope"></i> admissions@uaar.edu.pk </p>
+				 <p><i class="fa fa-phone"></i> +92312-5661662 </p>
+				 <p><i class="fa fa fa-envelope"></i> arslantahir0007@gmail.com </p>
 			  </div>
 			  <div class="col-lg-3 col-md-6 col-sm-6 col">
 				 <h5 class="headin5_amrc col_white_amrc pt2">Follow us</h5>
@@ -225,19 +225,6 @@
 		   </div>
 		</div>
 		<div class="container">
-		   <!--foote_bottom_ul_amrc ends here-->
-		   <p class="copyright text-center">All Rights Reserved. &copy; 2018 <a href="#">Arslan Tahir Farm Care</a>
-			  Design By :
-			  <a href="https://www.facebook.com/arslan.tahir.3114">Arslan Tahir</a>
-		   </p>
-		   <ul class="social_footer_ul">
-			  <li><a href="https://www.facebook.com/arslan.tahir.3114"><i class="fab fa-facebook-f"></i></a></li>
-			  <li><a href="https://twitter.com/uaarofficial?lang=en"><i class="fab fa-twitter"></i></a></li>
-		   </ul>
-		   <!--social_footer_ul ends here-->
-		</div>
-	 </footer>
-
 	 <!-- Bootstrap core JavaScript -->
 	 <script src="vendor/jquery/jquery.min.js"></script>
 	 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
