--- a/sugarcane.html
+++ b/sugarcane.html
@@ -66,7 +66,7 @@
 				 </li>
 
 				 <li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
+					<a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
 					   aria-haspopup="true" aria-expanded="false">
 					   Crops
 					</a>
@@ -135,7 +135,7 @@
 				<ul>
 					<li>Growth: september to march</li>
 					<li>Ideal for sub-tropical climate</li>
-					<li>Needs alot of wateing</li>
+					<li>Needs alot of watering</li>
 					
 				</ul>
 			</div>
@@ -170,8 +170,8 @@
 				 <!--headin5_amrc-->
 				 <p class="mb10">We are Final year students in Arid university Rawalpindi</p>
 				 <p><i class="fa fa-location-arrow"></i> Murree roard , Shamsabad metro station ARID university </p>
-				 <p><i class="fa fa-phone"></i> 051-9062313 </p>
-				 <p><i class="fa fa fa-envelope"></i> admissions@uaar.edu.pk </p>
+				 <p><i class="fa fa-phone"></i> +92312-5661662 </p>
+				 <p><i class="fa fa fa-envelope"></i> arslantahir0007@gmail.com </p>
 			  </div>
 			  <div class="col-lg-3 col-md-6 col-sm-6 col">
 				 <h5 class="headin5_amrc col_white_amrc pt2">Follow us</h5>
@@ -226,18 +226,6 @@
 		   </div>
 		</div>
 		<div class="container">
-		   <!--foote_bottom_ul_amrc ends here-->
-		   <p class="copyright text-center">All Rights Reserved. &copy; 2018 <a href="#">Arslan Tahir Farm Care</a>
-			  Design By :
-			  <a href="https://www.facebook.com/arslan.tahir.3114">Arslan Tahir</a>
-		   </p>
-		   <ul class="social_footer_ul">
-			  <li><a href="https://www.facebook.com/arslan.tahir.3114"><i class="fab fa-facebook-f"></i></a></li>
-			  <li><a href="https://twitter.com/uaarofficial?lang=en"><i class="fab fa-twitter"></i></a></li>
-		   </ul>
-		   <!--social_footer_ul ends here-->
-		</div>
-	 </footer>
 	 <!-- Bootstrap core JavaScript -->
 	 <script src="vendor/jquery/jquery.min.js"></script>
 	 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
