--- a/technology.html
+++ b/technology.html
@@ -28,13 +28,13 @@
 			   <div class="collapse navbar-collapse" id="navbarResponsive">
 				  <ul class="navbar-nav ml-auto">
 					 <li class="nav-item">
-						<a class="nav-link active" href="index.html">Home</a>
+						<a class="nav-link " href="index.html">Home</a>
 					 </li>
 					 <li class="nav-item">
 						<a class="nav-link" href="about.html">About</a>
 					 </li>
 					 <li class="nav-item">
-						<a class="nav-link" href="technology.html">Technology</a>
+						<a class="nav-link active" href="technology.html">Technology</a>
 					 </li>
 					 <li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown"
@@ -136,8 +136,10 @@
 					<h2>Agriculture Technology</h2>
 
                     <p>Modern farms and agricultural operations work far differently than those a few decades ago, primarily because of advancements in technology, including sensors, devices, machines, and information technology. Today’s agriculture routinely uses sophisticated technologies such as robots, temperature and moisture sensors, aerial images, and GPS technology. These advanced devices and precision agriculture and robotic systems allow businesses to be more profitable, efficient, safer, and more environmentally friendly.
+						<br>
 
-                        IMPORTANCE OF AGRICULTURAL TECHNOLOGY
+                       <h5> IMPORTANCE OF AGRICULTURAL TECHNOLOGY</h5>
+					   <br>
                         Farmers no longer have to apply water, fertilizers, and pesticides uniformly across entire fields. Instead, they can use the minimum quantities required and target very specific areas, or even treat individual plants differently. Benefits include:
                         
                         <li>Higher crop productivity</li>
@@ -153,12 +155,6 @@
                     </ul>
                     
                     </p>
-
-                    <ul>
-						<li>Greater efficiencies and lower prices</li>
-						<li>Safer growing conditions and safer foods</li>
-						<li>Reduced environmental and ecological impact.</li>
-					</ul>
 					</p>
 				</div>
 			</div>
@@ -180,8 +176,8 @@
 				 <!--headin5_amrc-->
 				 <p class="mb10">We are Final year students in Arid university Rawalpindi</p>
 				 <p><i class="fa fa-location-arrow"></i> Murree roard , Shamsabad metro station ARID university </p>
-				 <p><i class="fa fa-phone"></i> 051-9062313 </p>
-				 <p><i class="fa fa fa-envelope"></i> admissions@uaar.edu.pk </p>
+				 <p><i class="fa fa-phone"></i> +92312-5661662 </p>
+				 <p><i class="fa fa fa-envelope"></i> arslantahir0007@gmail.com </p>
 			  </div>
 			  <div class="col-lg-3 col-md-6 col-sm-6 col">
 				 <h5 class="headin5_amrc col_white_amrc pt2">Follow us</h5>
@@ -236,18 +232,6 @@
 		   </div>
 		</div>
 		<div class="container">
-		   <!--foote_bottom_ul_amrc ends here-->
-		   <p class="copyright text-center">All Rights Reserved. &copy; 2018 <a href="#">Arslan Tahir Farm Care</a>
-			  Design By :
-			  <a href="https://www.facebook.com/arslan.tahir.3114">Arslan Tahir</a>
-		   </p>
-		   <ul class="social_footer_ul">
-			  <li><a href="https://www.facebook.com/arslan.tahir.3114"><i class="fab fa-facebook-f"></i></a></li>
-			  <li><a href="https://twitter.com/uaarofficial?lang=en"><i class="fab fa-twitter"></i></a></li>
-		   </ul>
-		   <!--social_footer_ul ends here-->
-		</div>
-	 </footer>
 
 	 <!-- Bootstrap core JavaScript -->
 	 <script src="vendor/jquery/jquery.min.js"></script>
